src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void dnn_Net_getLayerTypes_0(void* self, void* layersTypes);
extern "C" __declspec(dllexport) int dnn_Net_getLayersCount_0(void* self, const char* layerType);
extern "C" __declspec(dllexport) void dnn_Net_getMemoryConsumption_0(void* self, void* netInputShapes, void* netInputTypes, size_t weights, size_t blobs);
extern "C" __declspec(dllexport) void dnn_Net_enableFusion_0(void* self, bool fusion);
extern "C" __declspec(dllexport) void dnn_Net_enableWinograd_0(void* self, bool useWinograd);
extern "C" __declspec(dllexport) int64 dnn_Net_getPerfProfile_0(void* self, void* timings);
extern "C" __declspec(dllexport) void dnn_Net_enableKVCache_0(void* self);
extern "C" __declspec(dllexport) void dnn_Net_disableKVCache_0(void* self);
extern "C" __declspec(dllexport) void dnn_Net_resetKVCache_0(void* self);
extern "C" __declspec(dllexport) void dnn_Net_getPerfProfile_1(void* self, void* names, void* timems, void* counts);
extern "C" __declspec(dllexport) void dnn_Net_printPerfProfile_0(void* self);
extern "C" __declspec(dllexport) void dnn_SegmentationModel_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_SegmentationModel_New_0(const char* model, const char* config);
extern "C" __declspec(dllexport) void* dnn_SegmentationModel_New_1(void* network);
extern "C" __declspec(dllexport) void dnn_SegmentationModel_segment_0(void* self, void* frame, void* mask);
extern "C" __declspec(dllexport) void dnn_TextDetectionModel_Delete(void* self);
extern "C" __declspec(dllexport) void dnn_TextDetectionModel_detect_0(void* self, void* frame, void* detections, void* confidences);
extern "C" __declspec(dllexport) void dnn_TextDetectionModel_detect_1(void* self, void* frame, void* detections);
extern "C" __declspec(dllexport) void dnn_TextDetectionModel_detectTextRectangles_0(void* self, void* frame, void* detections, void* confidences);
extern "C" __declspec(dllexport) void dnn_TextDetectionModel_detectTextRectangles_1(void* self, void* frame, void* detections);
extern "C" __declspec(dllexport) void dnn_TextDetectionModel_DB_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_TextDetectionModel_DB_New_0(void* network);
extern "C" __declspec(dllexport) void* dnn_TextDetectionModel_DB_New_1(const char* model, const char* config);
extern "C" __declspec(dllexport) void* dnn_TextDetectionModel_DB_setBinaryThreshold_0(void* self, float binaryThreshold);
extern "C" __declspec(dllexport) float dnn_TextDetectionModel_DB_getBinaryThreshold_0(void* self);
extern "C" __declspec(dllexport) void* dnn_TextDetectionModel_DB_setPolygonThreshold_0(void* self, float polygonThreshold);
extern "C" __declspec(dllexport) float dnn_TextDetectionModel_DB_getPolygonThreshold_0(void* self);
extern "C" __declspec(dllexport) void* dnn_TextDetectionModel_DB_setUnclipRatio_0(void* self, double unclipRatio);
extern "C" __declspec(dllexport) double dnn_TextDetectionModel_DB_getUnclipRatio_0(void* self);
extern "C" __declspec(dllexport) void* dnn_TextDetectionModel_DB_setMaxCandidates_0(void* self, int maxCandidates);
extern "C" __declspec(dllexport) int dnn_TextDetectionModel_DB_getMaxCandidates_0(void* self);
extern "C" __declspec(dllexport) void dnn_TextDetectionModel_EAST_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_TextDetectionModel_EAST_New_0(void* network);
extern "C" __declspec(dllexport) void* dnn_TextDetectionModel_EAST_New_1(const char* model, const char* config);
extern "C" __declspec(dllexport) void* dnn_TextDetectionModel_EAST_setConfidenceThreshold_0(void* self, float confThreshold);
extern "C" __declspec(dllexport) float dnn_TextDetectionModel_EAST_getConfidenceThreshold_0(void* self);
extern "C" __declspec(dllexport) void* dnn_TextDetectionModel_EAST_setNMSThreshold_0(void* self, float nmsThreshold);
extern "C" __declspec(dllexport) float dnn_TextDetectionModel_EAST_getNMSThreshold_0(void* self);
extern "C" __declspec(dllexport) void dnn_TextRecognitionModel_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_TextRecognitionModel_New_0(void* network);
extern "C" __declspec(dllexport) void* dnn_TextRecognitionModel_New_1(const char* model, const char* config);
extern "C" __declspec(dllexport) void* dnn_TextRecognitionModel_setDecodeType_0(void* self, const char* decodeType);
extern "C" __declspec(dllexport) const char* dnn_TextRecognitionModel_getDecodeType_0(void* self);
extern "C" __declspec(dllexport) void* dnn_TextRecognitionModel_setDecodeOptsCTCPrefixBeamSearch_0(void* self, int beamSize, int vocPruneSize);
extern "C" __declspec(dllexport) void* dnn_TextRecognitionModel_setVocabulary_0(void* self, void* vocabulary);
extern "C" __declspec(dllexport) void* dnn_TextRecognitionModel_getVocabulary_0(void* self);
extern "C" __declspec(dllexport) const char* dnn_TextRecognitionModel_recognize_0(void* self, void* frame);
extern "C" __declspec(dllexport) void dnn_TextRecognitionModel_recognize_1(void* self, void* frame, void* roiRects, void* results);
extern "C" __declspec(dllexport) void dnn_Tokenizer_Delete(void* self);
extern "C" __declspec(dllexport) void* dnn_Tokenizer_load_0(const char* model_config);
extern "C" __declspec(dllexport) void* dnn_Tokenizer_encode_0(void* self, const char* text);
extern "C" __declspec(dllexport) const char* dnn_Tokenizer_decode_0(void* self, void* tokens);
extern "C" __declspec(dllexport) void* cv_dnn_getAvailableTargets_0(void* be);
extern "C" __declspec(dllexport) void* cv_dnn_readNetFromTensorflow_0(const char* model, const char* config, int engine, void* extraOutputs);
extern "C" __declspec(dllexport) void* cv_dnn_readNetFromTensorflow_1(void* bufferModel, void* bufferConfig, int engine, void* extraOutputs);
extern "C" __declspec(dllexport) void* cv_dnn_readNetFromTFLite_0(const char* model, int engine);
extern "C" __declspec(dllexport) void* cv_dnn_readNetFromTFLite_1(void* bufferModel, int engine);