src/OpenCV5Sharp/Generated/NativeMethods.Dnn.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_getLayerTypes_0(DnnNetHandle self, IntPtr layersTypes);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_Net_getLayersCount_0(DnnNetHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? layerType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_getMemoryConsumption_0(DnnNetHandle self, IntPtr netInputShapes, IntPtr netInputTypes, long weights, long blobs);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_enableFusion_0(DnnNetHandle self, [MarshalAs(UnmanagedType.U1)] bool fusion);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_enableWinograd_0(DnnNetHandle self, [MarshalAs(UnmanagedType.U1)] bool useWinograd);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long dnn_Net_getPerfProfile_0(DnnNetHandle self, IntPtr timings);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_enableKVCache_0(DnnNetHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_disableKVCache_0(DnnNetHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_resetKVCache_0(DnnNetHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_getPerfProfile_1(DnnNetHandle self, IntPtr names, IntPtr timems, IntPtr counts);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Net_printPerfProfile_0(DnnNetHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_SegmentationModel_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_SegmentationModel_New_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, [MarshalAs(UnmanagedType.LPUTF8Str)] string? config);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_SegmentationModel_New_1(IntPtr network);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_SegmentationModel_segment_0(DnnSegmentationModelHandle self, MatHandle frame, MatHandle mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_TextDetectionModel_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_TextDetectionModel_detect_0(DnnTextDetectionModelHandle self, MatHandle frame, IntPtr detections, IntPtr confidences);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_TextDetectionModel_detect_1(DnnTextDetectionModelHandle self, MatHandle frame, IntPtr detections);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_TextDetectionModel_detectTextRectangles_0(DnnTextDetectionModelHandle self, MatHandle frame, IntPtr detections, IntPtr confidences);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_TextDetectionModel_detectTextRectangles_1(DnnTextDetectionModelHandle self, MatHandle frame, IntPtr detections);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_TextDetectionModel_DB_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextDetectionModel_DB_New_0(IntPtr network);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextDetectionModel_DB_New_1([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, [MarshalAs(UnmanagedType.LPUTF8Str)] string? config);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextDetectionModel_DB_setBinaryThreshold_0(DnnTextDetectionModelDbHandle self, float binaryThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float dnn_TextDetectionModel_DB_getBinaryThreshold_0(DnnTextDetectionModelDbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextDetectionModel_DB_setPolygonThreshold_0(DnnTextDetectionModelDbHandle self, float polygonThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float dnn_TextDetectionModel_DB_getPolygonThreshold_0(DnnTextDetectionModelDbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextDetectionModel_DB_setUnclipRatio_0(DnnTextDetectionModelDbHandle self, double unclipRatio);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double dnn_TextDetectionModel_DB_getUnclipRatio_0(DnnTextDetectionModelDbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextDetectionModel_DB_setMaxCandidates_0(DnnTextDetectionModelDbHandle self, int maxCandidates);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int dnn_TextDetectionModel_DB_getMaxCandidates_0(DnnTextDetectionModelDbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_TextDetectionModel_EAST_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextDetectionModel_EAST_New_0(IntPtr network);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextDetectionModel_EAST_New_1([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, [MarshalAs(UnmanagedType.LPUTF8Str)] string? config);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextDetectionModel_EAST_setConfidenceThreshold_0(DnnTextDetectionModelEastHandle self, float confThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float dnn_TextDetectionModel_EAST_getConfidenceThreshold_0(DnnTextDetectionModelEastHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextDetectionModel_EAST_setNMSThreshold_0(DnnTextDetectionModelEastHandle self, float nmsThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float dnn_TextDetectionModel_EAST_getNMSThreshold_0(DnnTextDetectionModelEastHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_TextRecognitionModel_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextRecognitionModel_New_0(IntPtr network);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextRecognitionModel_New_1([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, [MarshalAs(UnmanagedType.LPUTF8Str)] string? config);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextRecognitionModel_setDecodeType_0(DnnTextRecognitionModelHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? decodeType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextRecognitionModel_getDecodeType_0(DnnTextRecognitionModelHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextRecognitionModel_setDecodeOptsCTCPrefixBeamSearch_0(DnnTextRecognitionModelHandle self, int beamSize, int vocPruneSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextRecognitionModel_setVocabulary_0(DnnTextRecognitionModelHandle self, IntPtr vocabulary);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextRecognitionModel_getVocabulary_0(DnnTextRecognitionModelHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_TextRecognitionModel_recognize_0(DnnTextRecognitionModelHandle self, MatHandle frame);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_TextRecognitionModel_recognize_1(DnnTextRecognitionModelHandle self, MatHandle frame, IntPtr roiRects, IntPtr results);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void dnn_Tokenizer_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Tokenizer_load_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? model_config);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Tokenizer_encode_0(DnnTokenizerHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? text);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr dnn_Tokenizer_decode_0(DnnTokenizerHandle self, IntPtr tokens);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_getAvailableTargets_0(int be);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_readNetFromTensorflow_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, [MarshalAs(UnmanagedType.LPUTF8Str)] string? config, int engine, IntPtr extraOutputs);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_readNetFromTensorflow_1(IntPtr bufferModel, IntPtr bufferConfig, int engine, IntPtr extraOutputs);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_readNetFromTFLite_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? model, int engine);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_dnn_readNetFromTFLite_1(IntPtr bufferModel, int engine);
